Visual 3D View Bug due to Undo and seemly missing User Transform Orientation #37281

Closed
opened 2013-11-01 11:28:47 +01:00 by martin me · 7 comments

%%%--- Win7 64bit, Radeon HD6800 ---

- Blender 2.69---

After serveral steps of "undo" in Object Mode, the 3D Manipulator Widget appeared heavily distorted.
Previously I was modelling by using some user defined Transform Orientations. I deleted them Transform Orientations after using. Then I switched to Object Mode and undo my last steps of work. After this, the 3D Widget appered distorted. Also the boxes usualy showing the Transform Orientation appeared empty.
Therefore the "Undo" was probeably trying to switch back to a missing Transform Orietation and fails somehow.
The "Undo" itself seemly worked properly.

Attached the blend file and a screenshot

With best regards, Martin

%%%

%%%--- Win7 64bit, Radeon HD6800 --- - Blender 2.69--- After serveral steps of "undo" in Object Mode, the 3D Manipulator Widget appeared heavily distorted. Previously I was modelling by using some user defined Transform Orientations. I deleted them Transform Orientations after using. Then I switched to Object Mode and undo my last steps of work. After this, the 3D Widget appered distorted. Also the boxes usualy showing the Transform Orientation appeared empty. Therefore the "Undo" was probeably trying to switch back to a missing Transform Orietation and fails somehow. The "Undo" itself seemly worked properly. Attached the blend file and a screenshot With best regards, Martin %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%forgot something:
When I switch the Transform Orientation to any existing afterwards, the 3D Widget appears as usual again.

Greetings, Martin%%%

%%%forgot something: When I switch the Transform Orientation to any existing afterwards, the 3D Widget appears as usual again. Greetings, Martin%%%

%%%Could redo the issue… In fact, I find a bit strange custom orientations creation/deletion is not handled by undo, that’s the core of the issue imho.%%%

%%%Could redo the issue… In fact, I find a bit strange custom orientations creation/deletion is not handled by undo, that’s the core of the issue imho.%%%
Campbell Barton self-assigned this 2013-11-22 09:58:51 +01:00

This issue was referenced by blender/blender-addons-contrib@d44c79b7c9

This issue was referenced by blender/blender-addons-contrib@d44c79b7c93fb8c6525b79fa4b57548334185bbf

This issue was referenced by d44c79b7c9

This issue was referenced by d44c79b7c93fb8c6525b79fa4b57548334185bbf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d44c79b7c9.

Closed by commit d44c79b7c9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37281
No description provided.