Fix T37281: View3D could have invalid transform orientation using undo